[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/interactable_objects/chest/chest_1.png" type="Texture" id=1]
[ext_resource path="res://levels/interactable_objects/chest/chest_5.png" type="Texture" id=2]
[ext_resource path="res://levels/interactable_objects/chest/chest_2.png" type="Texture" id=3]
[ext_resource path="res://levels/interactable_objects/chest/chest_3.png" type="Texture" id=4]
[ext_resource path="res://levels/interactable_objects/chest/chest_4.png" type="Texture" id=5]
[ext_resource path="res://levels/interactable_objects/chest/Chest.gd" type="Script" id=6]
[ext_resource path="res://levels/interactable_objects/chest/e_key_1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "open",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 168.084, 113.811 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Key:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Key:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 6, 6 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("InstancePosition:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "created"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("InstancePosition:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Chest" type="Area2D"]
collision_layer = 128
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 36.0053, 54.3114 )
shape = SubResource( 2 )

[node name="Key" type="Sprite" parent="."]
visible = false
position = Vector2( 37.528, -161.406 )
scale = Vector2( 6, 6 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Key"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="InstancePosition" type="Position2D" parent="."]
position = Vector2( 60.1515, -29.9155 )
scale = Vector2( 1e-05, 1e-05 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="InstancePosition"]
root_node = NodePath("../..")
anims/RESET = SubResource( 5 )
anims/created = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Chest_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
